Move checkbox up (should fix second menu on mobile)
Fix nav-bar background on mobile

--- a/_sass/bulma_material_overrides.scss
+++ b/_sass/bulma_material_overrides.scss
@@ -290,6 +290,10 @@ hr {
       background-color: $white;
     }
   }
+
+  .nav-menu {
+    background-color: $primary;
+  }
 }
 
 .tabs {
